# akademy-matriculation_confirmation

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
trytond/modules/akademy_matriculation_confirmation/: README.md  __init__.py  matriculation.py  matriculation.xml  tryton.cfg
trytond/modules/akademy_matriculation_confirmation/locale/: de.po  en.po  fr.po  pt.po
trytond/modules/akademy_matriculation_confirmation/security/: access_rights_admin.xml  access_rights_direct.xml  access_rights_secret.xml  access_rights_student.xml  access_rights_teacher.xml
trytond/modules/akademy_matriculation_confirmation/tests/: __init__.py  test_matriculation.py
trytond/modules/akademy_matriculation_confirmation/view/: changematriculation_wizcreate_form.xml  matriculation_wizcreate_form.xml
