[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "akademy_matriculation_confirmation"
version = "1.0.0"
description = "SAGE Education is a free and open-source project for ***educators, educational institutions, and governments."
authors = [
    { name = "Zacarias Juliano Capingala", email = "zacariasjuliano@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0-or-later" }
keywords = ["education", "SGA", "SGE", "SIE", "sage-edu", "school"]
dependencies = [
    "akademy_classe~=1.0",
    "akademy_matriculation~=1.0",
]

[project.urls]
Homepage = "https://comunidadedosaber.ao"
Documentation = "https://docs.comunidadedosaber.ao"
Demo = "https://sage.comunidadedosaber.ao"
Repository = "https://github.com/comunidadedosaber/akademy-matriculation_confirmation"
"Bug Tracker" = "https://github.com/comunidadedosaber/akademy-matriculation_confirmation/issues"
Changelog = "https://github.com/comunidadedosaber/akademy-matriculation_confirmation/blob/main/CHANGELOG.md"

[tool.poetry]
classifiers=[
    'Development Status :: 1 - Production/Stable',
    'Environment :: Plugins',
    'Framework :: Tryton',
    'Intended Audience :: Developers',
    'Intended Audience :: Educational Institution',
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+) ",
    'Natural Language :: Portuguese',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Topic :: Education',
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.hatch.build]
exclude = ["dist"]

[tool.hatch.build.targets.wheel]
packages = ["trytond"]
